--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "complex-app",
   "version": "1.0.0",
+  "engines": {
+    "node": "12.18.0"
+  },
   "description": "",
   "main": "app.js",
   "scripts": {
-    "watch": "start nodemon db --ignore frontend-js --ignore public/ && start webpack --watch",
+    "watch": "nodemon db --ignore frontend-js --ignore public/ & webpack --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,16 +16,20 @@
   "dependencies": {
     "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
+    "@sendgrid/mail": "^7.2.5",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^3.2.0",
+    "cors": "^2.8.5",
+    "csurf": "^1.10.0",
     "dompurify": "^2.0.12",
     "dotenv": "^8.2.0",
     "ejs": "^2.7.4",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "marked": "^1.1.1",
     "md5": "^2.2.1",
     "mongodb": "^3.5.9",
