Maintenance : Updated dependancies and database connection method

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CONNECTIONSTRING =
+CONNECTIONSTRING = mongodb+srv://todoAppUser:Kiprotich254@cluster0.eawpi.mongodb.net/
 PORT=3000
 JWTSECRET=mys1upers2ecr3et4phrase
 SENDGRIDAPIKEY = 
