--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CONNECTIONSTRING = mongodb+srv://todoAppUser:Kiprotich254@cluster0.eawpi.mongodb.net/
+CONNECTIONSTRING =
 PORT=3000
 JWTSECRET=mys1upers2ecr3et4phrase
 SENDGRIDAPIKEY = 
